# mqreq

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/: labeler.yml
.github/workflows/: labeler.yml  python-package.yml
script/: init.sh  pyenv.sh
src/: __main__.py
tests/: test_mqreq.py  test_ntest.py
