[tool.poetry]
name = "mqreq"
version = "0.1.0"
description = ""
authors = ["MichinaoShimizu <shimizu.michinao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
