[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ntest"
version = "0.1.1"
description = ""
authors = ["MichinaoShimizu <shimizu.michinao@gmail.com>"]
license = ""
readme = "README.md"
repository = "https://github.com/MichinaoShimizu/mqreqs"

include = [
    "poetry.lock",
    "tox.ini",
    "tests",
    "docs",
]

exclude = [
    "docs/_build",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
PyYAML = "^6.0"
icdiff = "^2.0.4"
pydantic = "^1.9.0"
joblib = "^1.1.0"
rich = "^11.2.0"
Sphinx = {version = "^4.4.0", optional = true, extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
pre-commit = "^2.17.0"
freezegun = "^1.1.0"
