[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boilerplate.poetry.py"
version = "0.1.0"
description = ""
authors = ["MichinaoShimizu <shimizu.michinao@gmail.com>"]
license = ""
readme = "README.md"
repository = "https://github.com/MichinaoShimizu/boilerplate.poetry.py"
packages = [
    { include = "src", from = "." }
]
include = [
    "poetry.lock",
    "tox.ini",
    "tests"
]

[tool.poetry.dependencies]
python = "^3.8.12"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pydantic = "^1.9.0"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
black = "^22.1.0"

[tool.poetry.scripts]
start = "src.__main__:main"
